--- a/ITUniver.TeleCalc.Core/ITUniver.TeleCalc.Core.csproj
+++ b/ITUniver.TeleCalc.Core/ITUniver.TeleCalc.Core.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{005E9050-C1C3-463F-8061-503A2E07CC0D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>ITUniver.TeleCalc.ConCalc</RootNamespace>
-    <AssemblyName>ITUniver.TeleCalc.ConCalc</AssemblyName>
+    <ProjectGuid>{58AF2742-4EDE-4DAC-B70D-B4852CF8A19D}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>ITUniver.TeleCalc.Core</RootNamespace>
+    <AssemblyName>ITUniver.TeleCalc.Core</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,17 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Calc.cs" />
+    <Compile Include="Operations\Mult.cs" />
+    <Compile Include="Operations\IOperation.cs" />
+    <Compile Include="Operations\Div.cs" />
+    <Compile Include="Operations\Sub.cs" />
+    <Compile Include="Operations\Sum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\ITUniver.TeleCalc.Core\ITUniver.TeleCalc.Core.csproj">
-      <Project>{58af2742-4ede-4dac-b70d-b4852cf8a19d}</Project>
-      <Name>ITUniver.TeleCalc.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
