--- a/ITUniver.TeleCalc.Web/ITUniver.TeleCalc.Web.csproj
+++ b/ITUniver.TeleCalc.Web/ITUniver.TeleCalc.Web.csproj
@@ -196,7 +196,8 @@
     <Content Include="Views\Calc\Exec.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\Double.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Double1.cshtml" />
-    <Content Include="Views\Calc\Partial.cshtml" />
+    <Content Include="Views\Calc\ExecResult.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Collection.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
