Добавлен вывод истории операций на форму

--- a/ITUniver.TeleCalc.Web/ITUniver.TeleCalc.Web.csproj
+++ b/ITUniver.TeleCalc.Web/ITUniver.TeleCalc.Web.csproj
@@ -149,9 +149,14 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CalcModel.cs" />
+    <Compile Include="Models\OperationHistory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\TeleCalc.mdf" />
+    <Content Include="App_Data\TeleCalc_log.ldf">
+      <DependentUpon>TeleCalc.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -198,10 +203,9 @@
     <Content Include="Views\Shared\EditorTemplates\Double1.cshtml" />
     <Content Include="Views\Calc\ExecResult.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Collection.cshtml" />
+    <Content Include="Views\Calc\OperationHistory.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
