--- a/ITUniver.TeleCalc.Web/ITUniver.TeleCalc.Web.csproj
+++ b/ITUniver.TeleCalc.Web/ITUniver.TeleCalc.Web.csproj
@@ -148,9 +148,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Models\CalcModel.cs" />
     <Compile Include="Models\OperationHistory.cs" />
+    <Compile Include="Models\OperationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\OperationRepository.cs" />
+    <Compile Include="Repositories\HistoryRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\TeleCalc.mdf" />
@@ -204,6 +209,7 @@
     <Content Include="Views\Calc\ExecResult.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Collection.cshtml" />
     <Content Include="Views\Calc\OperationHistory.cshtml" />
+    <Content Include="Views\Calc\HistoryItem.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
